--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Ionic Angular Course</string>
-    <string name="title_activity_main">Ionic Angular Course</string>
+    <string name="app_name">PairBnB</string>
+    <string name="title_activity_main">PairBnB</string>
     <string name="package_name">com.udemy.course.ionic</string>
     <string name="fileprovider_authority">com.udemy.course.ionic.fileprovider</string>
     <string name="custom_url_scheme">com.udemy.course.ionic</string>
